--- a/py/K_means_clustering_ML_Lab.ipynb
+++ b/py/K_means_clustering_ML_Lab.ipynb
@@ -1,69 +1,21 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 2,
-  "metadata": {
-    "colab": {
-      "name": "K means clustering ML Lab.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3.7.4 64-bit ('base': conda)"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.7.4",
-      "mimetype": "text/x-python",
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "pygments_lexer": "ipython3",
-      "nbconvert_exporter": "python",
-      "file_extension": ".py"
-    },
-    "interpreter": {
-      "hash": "1467f57d84b6e92f4a84da548480054ae7f8b20936ad7bf380dd788f3906d999"
-    }
-  },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 77,
-      "source": [
-        "!python --version"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Python 3.7.4\n"
-          ]
-        }
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JTTjEURs6Hvk",
-        "outputId": "56c7e670-18a9-4339-9326-784b66f6c1c7"
-      }
-    },
-    {
       "cell_type": "markdown",
-      "source": [
-        "# K-Means Clustering\n",
-        "\n",
-        "> Date: 29/11/21"
-      ],
       "metadata": {
         "id": "g9gGklId6Sx4"
-      }
+      },
+      "source": [
+        "# K-Means Clustering\n"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 78,
+      "metadata": {
+        "id": "oMyvjWKj6fTl"
+      },
+      "outputs": [],
       "source": [
         "X = [\n",
         "    [5.9, 3.2],\n",
@@ -77,49 +29,42 @@
         "    [5.1, 3.8],\n",
         "    [6.0, 3.0]\n",
         "]"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "oMyvjWKj6fTl"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 79,
-      "source": [
-        "centroids = [\n",
-        "    [6.2, 3.2], [6.6, 3.7], [6.5, 3.0]\n",
-        "]\n",
-        "\n",
-        "clusters= {}"
-      ],
-      "outputs": [],
       "metadata": {
         "id": "eQM_GZpw7p4L"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "centroids = [\n",
+        "    [6.2, 3.2], [6.6, 3.7], [6.5, 3.0]]\n",
+        "\n",
+        "clusters= {}"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 80,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "def euc_dist(x1, x2, y1, y2):\n",
-        "    '''\n",
-        "    Returns the euclidean distance between the given points.\n",
-        "    '''\n",
+        "    \n",
         "    res = (((x2 - x1) ** 2) + ((y2 - y1) ** 2)) ** 0.5\n",
         "    return res"
-      ],
-      "outputs": [],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 81,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "def k_means(X, centroids, clusters, k=4):\n",
-        "    '''\n",
-        "    Assigns each point in X to a centroid in centroids populating the clusters dictionary.\n",
-        "    '''\n",
+        "    \n",
         "    for i in range(k):\n",
         "        clusters[i] = []\n",
         "\n",
@@ -133,18 +78,16 @@
         "        clusters[centroid_ind].append(X[i])\n",
         "\n",
         "    return clusters"
-      ],
-      "outputs": [],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 82,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "def new_centroids(X, centroids, clusters, k=4):\n",
-        "    '''\n",
-        "    Forms new centroids using average of all points in the cluster.\n",
-        "    '''\n",
+        "  \n",
         "    for i in range(k):\n",
         "        x_sum = sum([n[0] for n in clusters[i]])\n",
         "        y_sum = sum([n[1] for n in clusters[i]])\n",
@@ -152,28 +95,16 @@
         "        centroids[i] = [round(x_sum / len(clusters[i]), 3), round(y_sum / len(clusters[i]), 3)]\n",
         "\n",
         "    return centroids"
-      ],
-      "outputs": [],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 83,
-      "source": [
-        "for i in range(6):\n",
-        "    clusters = k_means(X, centroids=centroids, clusters=clusters, k=3)\n",
-        "    centroids = new_centroids(X, centroids=centroids, clusters=clusters, k=3)\n",
-        "\n",
-        "    print(f\"Centroids during iteration {i+1}: {centroids}\")\n",
-        "    if i == 0:\n",
-        "        print(f\"Centre of the first cluster after 1 iteration: {centroids[0]}\\n\")\n",
-        "    elif i == 1:\n",
-        "        print(f\"Centre of the second cluster after 2 iterations: {centroids[1]}\\n\")"
-      ],
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Centroids during iteration 1: [[5.171, 3.171], [5.5, 4.2], [6.45, 2.95]]\n",
             "Centre of the first cluster after 1 iteration: [5.171, 3.171]\n",
@@ -188,41 +119,78 @@
           ]
         }
       ],
-      "metadata": {}
+      "source": [
+        "for i in range(6):\n",
+        "    clusters = k_means(X, centroids=centroids, clusters=clusters, k=3)\n",
+        "    centroids = new_centroids(X, centroids=centroids, clusters=clusters, k=3)\n",
+        "\n",
+        "    print(f\"Centroids during iteration {i+1}: {centroids}\")\n",
+        "    if i == 0:\n",
+        "        print(f\"Centre of the first cluster after 1 iteration: {centroids[0]}\\n\")\n",
+        "    elif i == 1:\n",
+        "        print(f\"Centre of the second cluster after 2 iterations: {centroids[1]}\\n\")"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 84,
-      "source": [
-        "print(f\"Centre of the third cluster after it converges: {centroids[2]}\")"
-      ],
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Centre of the third cluster after it converges: [6.2, 3.025]\n"
           ]
         }
       ],
-      "metadata": {}
+      "source": [
+        "print(f\"Centre of the third cluster after it converges: {centroids[2]}\")"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 85,
-      "source": [
-        "print(\"Observing the values found in the previous iterations, the number of iterations required is 3\")"
-      ],
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Observing the values found in the previous iterations, the number of iterations required is 3\n"
           ]
         }
       ],
-      "metadata": {}
+      "source": [
+        "print(\"Observing the values found in the previous iterations, the number of iterations required is 3\")"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "K means clustering ML Lab.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "1467f57d84b6e92f4a84da548480054ae7f8b20936ad7bf380dd788f3906d999"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.7.4 64-bit ('base': conda)",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
